# Assembl-Really

./: Cargo.toml  README.md
asmr examples/: greetings.asm  greetings.asmr  hello_world.asm  nums.asm  test.asm
asmr-lsp/: Cargo.toml  Dockerfile  build.bat  docker-compose.yml
asmr-lsp/src/: completion_provider.rs  document_symbol_provider.rs  lib.rs  semantic_highlighter.rs
asmr-lsp/vscode_ext/: README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
asmr-lsp/vscode_ext/src/: completion_provider.ts  document_symbol_provider.ts  extension.ts  semantic_highlighter.ts
asmr-lsp/vscode_ext/syntaxes/: asmr.tmLanguage.json
src/: core.rs  interpreter.rs  lib.rs  parser.rs
src/core/: builtins.rs  executing_context.rs  flags.rs  register.rs
src/interpreter/: error.rs
src/parser/: error.rs  instruction.rs  line.rs  token.rs
